# loro-swift

./: Package.swift
Plugins/LoroBuildPlugin/: LoroBuildPlugin.swift
Plugins/LoroSwiftBuildPlugin/: LoroSwiftBuildPlugin.swift
Sources/Loro/: LoroFFI.swift
Sources/loroFFI/: loroFFI.m
Sources/loroFFI/include/: loroFFI.h  loroFFI.modulemap
loro-rs/: Cargo.toml
loro-rs/src/: lib.rs  loro.udl
loro-swift/: Cargo.toml
scripts/: build_rv.sh
