[package]
name = "loro-swift"
version = "0.16.2"
edition = "2021"

# By default this will produce an rlib named "loro-swift", which is what we want.

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[dependencies]
# Build using a compatible rev of the Loro Rust project.  To get a newer version of Loro, we need to update the "rev" specified here, and fix resultant build errors.
loro-ffi = { git = "https://github.com/loro-dev/loro.git", rev = "9680be41" }
# See https://mozilla.github.io/uniffi-rs/latest/tutorial/Prerequisites.html
uniffi = { version = "0.28" }

[build-dependencies]
# See https://mozilla.github.io/uniffi-rs/latest/tutorial/Prerequisites.html
uniffi = { version = "0.28", features = ["build"] }

[features]
cli = ["uniffi/cli"]
