[package]
name = "loro-swift"
version = "1.5.0"
edition = "2021"

# By default this will produce an rlib named "loro-swift", which is what we want.

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[dependencies]
loro-ffi = "1.*"
# See https://mozilla.github.io/uniffi-rs/latest/tutorial/Prerequisites.html
uniffi = { version = "0.28.3" }

[build-dependencies]
# See https://mozilla.github.io/uniffi-rs/latest/tutorial/Prerequisites.html
uniffi = { version = "0.28", features = ["build"] }

[features]
cli = ["uniffi/cli"]
